fixed alignment of the back-all / lay-all cells

--- a/src/components/BettingWidgets/ComplexBettingWidget/ComplexBettingWidget.less
+++ b/src/components/BettingWidgets/ComplexBettingWidget/ComplexBettingWidget.less
@@ -210,7 +210,7 @@ div.complex-betting {
       border-bottom:0 none;
       .rt-tr{
         .rt-th:nth-child(2){
-          width:142px !important;
+          width:148px !important;
         }
       }
     }
@@ -229,6 +229,7 @@ div.complex-betting {
     height: 15px;
     background-size: 100%;
     display: inline-block;
+    margin-bottom: 3px;
     &:hover {
       background: url('../../../assets/icons/left_arrow_blue@2x.png') no-repeat;
       background-size: 100%;
